--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "query-string": "^4.3.4",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-image-picker": "^0.26.3",
     "react-native-splash-screen": "^2.1.0",
     "react-navigation": "^1.0.0-beta.11"
