至获地理位置页面

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "es6-sleep": "^2.0.2",
     "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "query-string": "^4.3.4",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
