--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.45.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-image-picker": "^0.26.3",
+    "react-native-maps": "^0.15.2",
     "react-native-splash-screen": "^2.1.0",
     "react-navigation": "^1.0.0-beta.11"
   },
